--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -38,9 +38,11 @@
 }
 
 .unselectable,
+.react-contextmenu-item,
 label {
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    outline: none;
 }
